--- a/Vacinacao/pom.xml
+++ b/Vacinacao/pom.xml
@@ -80,6 +80,20 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		
+		<!-- Quartz library -->
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.0.2</version>
+		</dependency>		 
+		
+		<!-- Log4j library -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.16</version>
+		</dependency>	
 
 	</dependencies>
 	
